Bug 259163 - Only part of web page is printed to pdf
Summary: Only part of web page is printed to pdf
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml printing (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-07 20:32 UTC by Anne Wilson
Modified: 2011-03-28 16:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Output when printing from the printer-friendly page (460.64 KB, application/pdf)
2010-12-07 20:32 UTC, Anne Wilson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anne Wilson 2010-12-07 20:32:46 UTC
Created attachment 54269 [details]
Output when printing from the printer-friendly page

Version:           unspecified (using KDE 4.5.3) 
OS:                Linux

I need to print a web page to document a project.  I first tried the printable version - http://www.emblibrary.com/EL/ColorChange.aspx?ProductID=x3063&Catalog=Emblibrary&prt=3.  In the past I have found it useful to print to pdf, so that I can file it with the associated files.  The result is attached.

I then tried to print to pdf straight from the main web page - http://www.emblibrary.com/EL/colorchange.aspx?productID=x3063.  This time approximately half of the file was produced.  The result is also attached.

Reproducible: Always

Steps to Reproduce:
Print the pages mentioned to PDF then view before sending to printer

Actual Results:  
Only part of the file exists, and there are many pages empty apart from the URL

Expected Results:  
A full set of pages, capable of being printed.
Comment 1 Anne Wilson 2010-12-07 20:56:23 UTC
The second attachment was too big, so both files are now available from
http://lydgate.org/images/Temp/

Since I wrote the report I have tried printing directly from the web page, and
found the result to be the same as ColourChanges.pdf.  This suggests that it is
a print problem rather than an Okular one.
Comment 2 Allan Sandfeld 2011-03-28 16:53:59 UTC
Git commit 3d44cb1fa7a4cc935813f4bcacc132d3bace54d7 by Allan Sandfeld Jensen.
Committed on 28/03/2011 at 16:38.
Pushed by carewolf into branch 'KDE/4.6'.

Fix serious regression in table printing

Old behavior restored after RenderRow has gotten their own coordinates.
BUG:259163
BUG:190071

M  +13   -20   khtml/rendering/render_table.cpp     

http://commits.kde.org/kdelibs/3d44cb1fa7a4cc935813f4bcacc132d3bace54d7
Comment 3 Allan Sandfeld 2011-03-28 16:55:35 UTC
Git commit 3075d7bb19cdf5f3e546c3919e38e01482430182 by Allan Sandfeld Jensen.
Committed on 28/03/2011 at 16:38.
Pushed by carewolf into branch 'master'.

Fix serious regression in table printing

Old behavior restored after RenderRow has gotten their own coordinates.
BUG:259163
BUG:190071

M  +13   -20   khtml/rendering/render_table.cpp     

http://commits.kde.org/kdelibs/3075d7bb19cdf5f3e546c3919e38e01482430182