Fix serious regression in table printing

Old behavior restored after RenderRow has gotten their own coordinates.
BUG:259163
BUG:190071